# ECE461

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  file_process  hehe.txt  main.py  message.txt  run
cli-entry-point/: README.md  entry.py  repo_analyzer_interface.py
cli_entry_point/: build_code.py  cli.py  file_process.py  install_dependencies.py  install_dependencies_bash.sh  repo_analyzer_interface.py
repo_analyzer/: Cargo.toml  README.md  URL  add_env_vars.bat  log1.txt
repo_analyzer/src/: lib.rs  main  main.rs  metric_calculations.rs  repo_analyzer_logger.rs  repo_list.rs  rest_api.rs  url_input.rs
repo_display/: Cargo.toml
repo_display/src/: main.rs  repo_display.rs
repo_list/src/: main.rs  repo_list.rs
run/: Cargo.toml
run/src/: repo_analyzer_logger.rs
