[package]
name = "repo_analyzer"
version = "0.1.0"
authors = ["Kevin Loiselle"]
edition = "2021"

[lib]
name = "repo_analyzer"
crate-type = ["dylib"]

[dependencies]
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive", "alloc"] }
serde_json = { version = "1.0.91" }
tokio = { version = "*", features = ["full"] }
substring = "1.4.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "*"
