[package]
name = "repo_analyzer"
version = "0.1.0"
authors = ["Kevin Loiselle"]
edition = "2021"

[lib]
name = "repo_analyzer"
crate-type = ["dylib"]

[dependencies]
reqwest = "0.11.14"
regex = "0.2"
base64 = "0.21.0"
async-recursion = "1.0.2"
serde = "1.0.152"
serde_json = "1.0.93"
substring = "1.4.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "*"
